crates/paws_services/src/provider/snapshots/paws_services__provider__openai__tests__fetch_models_server_error.snap
---
source: crates/paws_services/src/provider/openai.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "500 GET http://127.0.0.1:<port>/models",
        source: "{\"error\":{\"code\":500,\"message\":\"Internal Server Error\"}}",
    },
}
